--- a/.ado/jobs/universal.yml
+++ b/.ado/jobs/universal.yml
@@ -64,94 +64,95 @@ jobs:
           clean: false
           submodules: false
 
-        - task: PowerShell@2
-          displayName: "Check if this environment meets the development dependencies"
-          inputs:
-            targetType: filePath
-            filePath: $(Build.SourcesDirectory)\vnext\Scripts\rnw-dependencies.ps1
-            arguments: -NoPrompt -Tags buildLab
+        # - task: PowerShell@2
+        #   displayName: "Check if this environment meets the development dependencies"
+        #   inputs:
+        #     targetType: filePath
+        #     filePath: $(Build.SourcesDirectory)\vnext\Scripts\rnw-dependencies.ps1
+        #     arguments: -NoPrompt -Tags buildLab
 
-        - template: ../templates/build-rnw.yml
-          parameters:
-            yarnBuildCmd: build
-            project: vnext/Microsoft.ReactNative.sln
+        # - template: ../templates/build-rnw.yml
+        #   parameters:
+        #     yarnBuildCmd: build
+        #     project: vnext/Microsoft.ReactNative.sln
 
-        - powershell: |
-            Write-Debug "Using expression $($env:GOOGLETESTADAPTERPATHEXPRESSION)"
-            Write-Host "##vso[task.setvariable variable=GoogleTestAdapterPath]$(Invoke-Expression $env:GOOGLETESTADAPTERPATHEXPRESSION)"
-            Write-Host "Set environment variable to ($env:GoogleTestAdapterPath)"
-          displayName: Set GoogleTestAdapterPath
+        # - powershell: |
+        #     Write-Debug "Using expression $($env:GOOGLETESTADAPTERPATHEXPRESSION)"
+        #     Write-Host "##vso[task.setvariable variable=GoogleTestAdapterPath]$(Invoke-Expression $env:GOOGLETESTADAPTERPATHEXPRESSION)"
+        #     Write-Host "Set environment variable to ($env:GoogleTestAdapterPath)"
+        #   displayName: Set GoogleTestAdapterPath
 
-        - task: VSTest@2
-          displayName: Run Universal Unit Tests (Native)
-          timeoutInMinutes: 5 # Set smaller timeout , due to hangs
-          inputs:
-            testSelector: testAssemblies
-            testAssemblyVer2: |
-              Microsoft.ReactNative.Cxx.UnitTests/Microsoft.ReactNative.Cxx.UnitTests.exe
-              Microsoft.ReactNative.IntegrationTests/Microsoft.ReactNative.IntegrationTests.exe
-              Mso.UnitTests/Mso.UnitTests.exe
-            pathtoCustomTestAdapters: $(GoogleTestAdapterPath)
-            searchFolder: $(Build.SourcesDirectory)/vnext/target/${{ obj.BuildPlatform }}/${{ obj.BuildConfiguration }}
-            runTestsInIsolation: true
-            platform: ${{ obj.BuildPlatform }}
-            configuration: ${{ obj.BuildConfiguration }}
-            publishRunAttachments: true
-            collectDumpOn: onAbortOnly
-            vsTestVersion: latest
-          condition: and(succeeded(), not(startsWith(variables.BuildPlatform, 'arm')))
+        # - task: VSTest@2
+        #   displayName: Run Universal Unit Tests (Native)
+        #   timeoutInMinutes: 5 # Set smaller timeout , due to hangs
+        #   inputs:
+        #     testSelector: testAssemblies
+        #     testAssemblyVer2: |
+        #       Microsoft.ReactNative.Cxx.UnitTests/Microsoft.ReactNative.Cxx.UnitTests.exe
+        #       Microsoft.ReactNative.IntegrationTests/Microsoft.ReactNative.IntegrationTests.exe
+        #       Mso.UnitTests/Mso.UnitTests.exe
+        #     pathtoCustomTestAdapters: $(GoogleTestAdapterPath)
+        #     searchFolder: $(Build.SourcesDirectory)/vnext/target/${{ obj.BuildPlatform }}/${{ obj.BuildConfiguration }}
+        #     runTestsInIsolation: true
+        #     platform: ${{ obj.BuildPlatform }}
+        #     configuration: ${{ obj.BuildConfiguration }}
+        #     publishRunAttachments: true
+        #     collectDumpOn: onAbortOnly
+        #     vsTestVersion: latest
+        #   condition: and(succeeded(), not(startsWith(variables.BuildPlatform, 'arm')))
 
-        - task: VSTest@2
-          displayName: Run Universal Unit Tests (UWP)
-          timeoutInMinutes: 5 # Set smaller timeout , due to hangs
-          inputs:
-            testSelector: testAssemblies
-            testAssemblyVer2: |
-              Microsoft.ReactNative.Managed.UnitTests/Microsoft.ReactNative.Managed.UnitTests/Microsoft.ReactNative.Managed.UnitTests.build.appxrecipe
-            searchFolder: $(Build.SourcesDirectory)/vnext/target/${{ obj.BuildPlatform }}/${{ obj.BuildConfiguration }}
-            runTestsInIsolation: true
-            platform: ${{ obj.BuildPlatform }}
-            configuration: ${{ obj.BuildConfiguration }}
-            publishRunAttachments: true
-            codeCoverageEnabled: true
-            collectDumpOn: onAbortOnly
-            vsTestVersion: latest
-          condition: and(succeeded(), not(startsWith(variables.BuildPlatform, 'arm')))
+        # - task: VSTest@2
+        #   displayName: Run Universal Unit Tests (UWP)
+        #   timeoutInMinutes: 5 # Set smaller timeout , due to hangs
+        #   inputs:
+        #     testSelector: testAssemblies
+        #     testAssemblyVer2: |
+        #       Microsoft.ReactNative.Managed.UnitTests/Microsoft.ReactNative.Managed.UnitTests/Microsoft.ReactNative.Managed.UnitTests.build.appxrecipe
+        #     searchFolder: $(Build.SourcesDirectory)/vnext/target/${{ obj.BuildPlatform }}/${{ obj.BuildConfiguration }}
+        #     runTestsInIsolation: true
+        #     platform: ${{ obj.BuildPlatform }}
+        #     configuration: ${{ obj.BuildConfiguration }}
+        #     publishRunAttachments: true
+        #     codeCoverageEnabled: true
+        #     collectDumpOn: onAbortOnly
+        #     vsTestVersion: latest
+        #   condition: and(succeeded(), not(startsWith(variables.BuildPlatform, 'arm')))
 
-        - task: VSTest@2
-          displayName: Run Universal Unit Tests (NetCore)
-          timeoutInMinutes: 5 # Set smaller timeout , due to hangs
-          inputs:
-            testSelector: testAssemblies
-            testAssemblyVer2: |
-              Microsoft.ReactNative.Managed.CodeGen.UnitTests/Microsoft.ReactNative.Managed.CodeGen.UnitTests.dll
-            searchFolder: $(Build.SourcesDirectory)/vnext/target/${{ obj.BuildPlatform }}/${{ obj.BuildConfiguration }}
-            runTestsInIsolation: true
-            platform: ${{ obj.BuildPlatform }}
-            configuration: ${{ obj.BuildConfiguration }}
-            publishRunAttachments: true
-            codeCoverageEnabled: true
-            collectDumpOn: onAbortOnly
-            vsTestVersion: latest
-          condition: and(succeeded(), eq(variables.BuildPlatform, 'x64'))
+        # - task: VSTest@2
+        #   displayName: Run Universal Unit Tests (NetCore)
+        #   timeoutInMinutes: 5 # Set smaller timeout , due to hangs
+        #   inputs:
+        #     testSelector: testAssemblies
+        #     testAssemblyVer2: |
+        #       Microsoft.ReactNative.Managed.CodeGen.UnitTests/Microsoft.ReactNative.Managed.CodeGen.UnitTests.dll
+        #     searchFolder: $(Build.SourcesDirectory)/vnext/target/${{ obj.BuildPlatform }}/${{ obj.BuildConfiguration }}
+        #     runTestsInIsolation: true
+        #     platform: ${{ obj.BuildPlatform }}
+        #     configuration: ${{ obj.BuildConfiguration }}
+        #     publishRunAttachments: true
+        #     codeCoverageEnabled: true
+        #     collectDumpOn: onAbortOnly
+        #     vsTestVersion: latest
+        #   condition: and(succeeded(), eq(variables.BuildPlatform, 'x64'))
 
-        - template: ../templates/publish-build-artifacts-for-nuget.yml
-          parameters:
-            artifactName: ReactWindows
-            layoutHeaders: eq('true', variables.LayoutHeaders)
-            contents: |
-              Microsoft.ReactNative\**
-              Microsoft.ReactNative.Managed\**
-              Microsoft.ReactNative.Managed.CodeGen\**
+        # - template: ../templates/publish-build-artifacts-for-nuget.yml
+        #   parameters:
+        #     artifactName: ReactWindows
+        #     layoutHeaders: eq('true', variables.LayoutHeaders)
+        #     contents: |
+        #       Microsoft.ReactNative\**
+        #       Microsoft.ReactNative.Managed\**
+        #       Microsoft.ReactNative.Managed.CodeGen\**
         
-        - task: ms.vss-governance-buildtask.governance-build-task-component-detection.ComponentGovernanceComponentDetection@0
-          displayName: 'Component Governance Detection'
-          inputs:
-            alertWarningLevel: Medium
-            scanType: 'Register'
+        # - task: ms.vss-governance-buildtask.governance-build-task-component-detection.ComponentGovernanceComponentDetection@0
+        #   displayName: 'Component Governance Detection'
+        #   inputs:
+        #     alertWarningLevel: Medium
+        #     scanType: 'Register'
 
   - job: UniversalBuild
     condition: ne( dependencies.Setup.outputs['checkPayload.shouldSkipPRBuild'], 'True' )
+    displayName: Universal Build Convergence
     dependsOn: 
       - ${{ each obj in parameters.buildMatrixPR }}:
         - UniversalBuild${{ obj.BuildPlatform }}${{ obj.BuildConfiguration }}
